--- a/rust/1.base-data-type.md
+++ b/rust/1.base-data-type.md
@@ -246,3 +246,15 @@ let condition = true;
 
 - 一把一个值赋给其它变量时就会发生移动
 - 一当一个包含 heap 数据的变量离开作用域时，它的值就会被 drop 函数清理，除非数据的所有权移动到另一个变量上了
+
+## 标准输出和错误输出
+```rust
+// 标准输出: stdout - println!
+// 标准错误: stderr - eprintln!
+```
+
+## 学习资料
+
+https://rustwiki.org/zh-CN/rust-by-example/index.html
+
+https://course.rs/about-book.html
