--- a/rust/3.string.md
+++ b/rust/3.string.md
@@ -4,9 +4,9 @@ title: String
 
 Rust 的核心语言层面 只有一个字符串类型: 字符串切片 str （或者是&str）
 
-字符串切片 对存储在其他地方、UTF-8 编码的字符串的引用
+字符串切片:对存储在其他地方、UTF-8 编码的字符串的引用。
 
-字符串字面量 存储在二进制的文件中 也是字符串切片
+字符串字面量:存储在二进制的文件中，也是字符串切片。
 
 ## String 类型
 
@@ -71,3 +71,49 @@ fn main() {
     println!("{}", s3);
 }
 ```
+
+&str 与 String的转换
+
+`&str` 转换为 `String`
+
+```rust
+ let str = &String::from("value"); // 此时的str 就是 &str 类型
+```
+
+`String` 类型转换为 `&str`
+
+```rust
+let toString: String = str.to_string();
+```
+
+
+
+```rust
+    // String 是对 Vec<u8> 的包装
+    let data = String::from("hello").len();
+    println!("{}", data);
+    // 一个中文占3个字节
+    let data = String::from("我的");
+    println!("{}", data.len()); // 6
+
+    // 打印字节
+    for byte in data.bytes() {
+        // 230 136 145
+        // 231 154 132
+        println!("{}", byte)
+    }
+
+    for ch in data.chars() {
+        println!("{}", ch) // 我 的
+    }
+
+    // rust 不支持对String进行索引
+//     索引的操作应该消耗的是O(1）时间的值
+    // 而 String无法保证， 因为他需要遍历所有的内容来确定合法的字符
+
+
+    // 切割字符串 需要沿着字符的边界切割 才不会抛出panic
+    let string_data = &data[0..3];
+    println!("{}", string_data);
+```
+
