--- a/rust/8.vec.md
+++ b/rust/8.vec.md
@@ -77,3 +77,26 @@ fn vec_enum() {
 }
 
 ```
+
+## 切片类型
+
+```rust
+// 比较大小 返回切片中最大的值
+// &[T] 表示一个切片 T 是一个切片类型
+fn compare_largest<T>(list: &[T]) -> &T
+// 实现了 PartialOrd 的 trait 才可以比较大小
+where
+    T: std::cmp::PartialOrd,
+{
+    let mut largest = &list[0];
+
+    // list 是 &[T] 类型。 如果直接使用 item in list  item的类型会是 &T 可以使用& 解构
+    for item in list {
+        if item > largest {
+            largest = &item
+        }
+    }
+    return largest;
+}
+```
+
