--- a/rust/10.painc.md
+++ b/rust/10.painc.md
@@ -37,3 +37,9 @@ Rust 没有类似异常的机制 但有 Api 和宏来处理异常
   > ```
 
 > 通过设置环境变量`RUST_BACKTRACE` 可以得到回溯信息。 如果需要获取带有调试信息的回溯（不要在`cargo run/build` 的时候 带上`--release`）
+
+
+
+## unwrap
+
+在 Rust 中，unwrap 是 Result 和 Option 类型的方法，它可以用于获取包含在 Result 或 Option 中的值。当 Result 或 Option 中包含一个值时，unwrap 方法会返回该值；当 Result 或 Option 中包含一个错误或空值时，unwrap 方法会触发一个 panic。
