--- a/rust/1.base-data-type.md
+++ b/rust/1.base-data-type.md
@@ -248,10 +248,13 @@ let condition = true;
 - 一当一个包含 heap 数据的变量离开作用域时，它的值就会被 drop 函数清理，除非数据的所有权移动到另一个变量上了
 
 ## 标准输出和错误输出
+
 ```rust
 // 标准输出: stdout - println!
 // 标准错误: stderr - eprintln!
 ```
+
+> rust 使用 trait 实现多态
 
 ## 学习资料
 
