--- a/rust/6.enum.md
+++ b/rust/6.enum.md
@@ -86,6 +86,9 @@ fn main() {
     let v = Some(3u8);
     match v {
         Some(3) => println!("three"),
+      	Some(s) if s < 5 => {
+          //...
+      }
         _ => println!("other")
     }
     // if let 只对枚举的某一项值进行处理
