--- a/rust/14.spawn.md
+++ b/rust/14.spawn.md
@@ -55,7 +55,7 @@ use std::sync::mpsc;
 // 消息通信
 fn main() {
     // 创建 Channel
-    // ，使用 mpsc::channel 函数来创建 Channel
+    // 使用 mpsc::channel 函数来创建 Channel
     // mpsc 表示 multiple producer, single consumer（多个生产者、一个消费者）
     // - 返回一个 tuple（元组）：里面元素分别是发送端、接收端
     //
@@ -76,7 +76,7 @@ fn main() {
     let revecied = rx.recv().unwrap();
     println!("result is {}", revecied);
     // try_recv不会阻塞线程
-    // 立即返回 Result<T, E>
+    // 立即返回 Result\<T, E\>
     // 有数据达到：返回 Ok，里面包含着数据
     // 否则，返回错误
     // 通常会使用循环调用来检查 try_recv 的结果
@@ -127,11 +127,11 @@ fn main() {
         handle.join().unwrap();
     }
 
-    //RefCelKT>/Rc<T> vs Mutex<T>/Arc<T>
-    // Mutex<T＞提供了内部可变性，和 Cell 家族一样
-    // 我们使用 RefCell<T＞ 来改变 Rc<T＞里面的内容
-    // 我们使用 Mutex<T＞来改变 Arc<T＞里面的内容
-    // 注意：Mutex<T＞有死锁风险
+    //RefCell\<T\>/Rc\<T\> vs Mutex\<T\>/Arc\<T\>
+    // Mutex\<T＞提供了内部可变性，和 Cell 家族一样
+    // 我们使用 RefCell\<T\> 来改变 Rc\<T\>里面的内容
+    // 我们使用 Mutex\<T\> 来改变 Arc\<T\> 里面的内容
+    // 注意：Mutex\<T\> 有死锁风险
     println!("result is end")
 }
 ```
@@ -150,8 +150,8 @@ Sync：允许从多线程访问
 一引用可以被安全的送往另一个线程
 •基础类型都是 Sync
 •完全由 Sync 类型组成的类型也是 Sync
-一但，Rc<T>不是 Sync 的
-RefCell ＜ T ＞ 和 CellT ＞ 家族也不是 Sync 的
-而，Mutex<T>是 Sync 的
+一但，Rc\<T\>不是 Sync 的
+RefCell \<T\> 和 Cell\<T\> 家族也不是 Sync 的
+而，Mutex\<T\>是 Sync 的
 
 > 手动实现的 Send 和 Sync 也是不安全的。
